[gd_scene load_steps=3 format=3 uid="uid://bau410gdn1gkp"]

[ext_resource type="Script" path="res://Scripts/Hud.gd" id="1_majtc"]
[ext_resource type="FontFile" uid="uid://cd5pwu5f6ambe" path="res://Resources/Fonts/NotoSansJP-Medium.ttf" id="1_n8uh0"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_majtc")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_right = 90.0
offset_bottom = 97.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_n8uh0")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -48.0
offset_right = 576.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_n8uh0")
theme_override_font_sizes/font_size = 64
text = "ねっ子をよけろ！"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 124.315
offset_right = 92.0
offset_bottom = 226.316
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_n8uh0")
theme_override_font_sizes/font_size = 64
text = "開始"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
